[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/coins/Coin.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[node name="Coin" type="KinematicBody2D" groups=["Coin"]]
z_index = 1
collision_mask = 5
input_pickable = true
collision/safe_margin = 0.1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )

[node name="CoinArea" type="Area2D" parent="." groups=["CoinArea"]]
collision_layer = 4
collision_mask = 6

[connection signal="input_event" from="." to="." method="_on_Draggable_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Coin_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Coin_mouse_exited"]
[connection signal="area_entered" from="CoinArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="CoinArea" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="CoinArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="CoinArea" to="." method="_on_Area2D_body_exited"]
